Able to add participants now.

--- a/app/rpg_battlemap/priv/www/partials/map_toolbar.html
+++ b/app/rpg_battlemap/priv/www/partials/map_toolbar.html
@@ -4,6 +4,8 @@
 
 <div class="btn-toolbar">
 
+	<div class="btn-group" ng-include="'/partials/participant_menu.html'"></div>
+
 	<div class="btn-group" ng-show="user == map.owner" ng-include="'/partials/grid_menu.html'"></div>
 
 	<div class="btn-group" ng-include="'/partials/layers_menu.html'"></div>
