--- a/app/rpg_battlemap/priv/www/partials/grid.html
+++ b/app/rpg_battlemap/priv/www/partials/grid.html
@@ -158,6 +158,20 @@
             </g>
 
             <g ng-switch-when="polyline" ng-controller="EditPolyZoneCtrl">
+
+              <circle
+                ng-repeat="point in midPoints"
+                cx="{{point.x * 32}}"
+                cy="{{point.y * 32}}"
+                r="8"
+                fill="white"
+                fill-opacity="0.5"
+                stroke="black"
+                stroke-width="4"
+                stroke-opacity="0.5"
+                ng-mousedown="addPoint(point, $event)"
+              />
+
               <circle
                 ng-repeat="point in points"
                 cx="{{point.x * 32}}"
@@ -168,6 +182,18 @@
                 stroke-width="4"
                 ng-mousedown="movingPoint(point, $event)"
               />
+
+              <image
+                ng-repeat="point in points"
+                x="{{ point.x * 32 + 8 }}"
+                y="{{ point.y * 32 - 16 }}"
+                width="8"
+                height="8"
+                xlink:href="/images/red-circle-x.png"
+                ng-mousedown="setPointToRemove(point, $event)"
+                ng-mouseup="removePoint(point, $event)"
+              />
+
             </g>
 
             <g ng-switch-when="polygon" ng-controller="EditPolyZoneCtrl">
