--- a/app/rpg_battlemap/priv/www/partials/map_tool_buttons.html
+++ b/app/rpg_battlemap/priv/www/partials/map_tool_buttons.html
@@ -8,7 +8,7 @@
 
 		<li>
 			<label for="newZoneName">Name</label>
-			<input ng-model="name" name="newZoneName" ng-click="stopPropagation($event)" />
+			<input type="text" ng-model="name" name="newZoneName" ng-click="stopPropagation($event)" />
 		</li>
 
 		<li>
@@ -54,7 +54,7 @@
 
 		<li>
 			<label for="newCombatantName">Name</label>
-			<input ng-model="name_base" name="newCombatantName" ng-click="stopPropagation($event)" />
+			<input type="text" ng-model="name_base" name="newCombatantName" ng-click="stopPropagation($event)" />
 		</li>
 
 		<li>
