--- a/app/rpg_battlemap/priv/www/css/override.css
+++ b/app/rpg_battlemap/priv/www/css/override.css
@@ -58,3 +58,13 @@ table.table-centered td
 	vertical-align: middle;
 }
 
+
+.dropdown-menu a
+{
+	white-space: nowrap;
+}
+
+button.close
+{
+	margin-left: 10px;
+}
