Able to clear selected combatant.
Also cleaned up layer button html a tiny bit.

--- a/app/rpg_battlemap/priv/www/partials/layers_menu.html
+++ b/app/rpg_battlemap/priv/www/partials/layers_menu.html
@@ -1,4 +1,4 @@
-<button class="btn btn-small dropdown-toggle" data-toggle="dropdown" href="#">Layers</button>
+<button class="btn btn-small dropdown-toggle" data-toggle="dropdown">Layers</button>
 
 <button class="btn btn-small" ng-controller="ListLayersCtrl" ng-show="layers.selected" ng-click="selectLayer(null)">
 	<span class="icon-eject"> </span>
