Able to delete characters now.

--- a/app/rpg_battlemap/priv/www/partials/list_maps.html
+++ b/app/rpg_battlemap/priv/www/partials/list_maps.html
@@ -62,7 +62,7 @@
 						<a href="{{ character.url }}">{{ character.name }}</a>
 					</td>
 					<td class="shrink">
-						<button class="btn btn-small btn-danger"><i class="icon-trash"></i> Delete Character</button>
+						<button class="btn btn-small btn-danger" ng-click="deleteCharacter(character)"><i class="icon-trash"></i> Delete Character</button>
 					</td>
 				</tr>
 			</table>
