--- a/app/rpg_battlemap/templates/base.html
+++ b/app/rpg_battlemap/templates/base.html
@@ -54,6 +54,7 @@
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 	<script type="text/javascript" src="//login.persona.org/include.js"></script>
 	<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/js/ui-bootstrap-tpls-0.4.0.min.js"></script>
 	<script src="/js/md5.js" type="text/javascript"></script>
 	{% block page_scripts %}
 	{% endblock %}
