--- a/app/rpg_battlemap/priv/www/partials/zone_tool_button.html
+++ b/app/rpg_battlemap/priv/www/partials/zone_tool_button.html
@@ -1,4 +1,4 @@
-<button class="btn btn-small" ng-class="{'active':toolName == 'Add Zone'}" ng-click="setTool()">{{ name }}</button>
+<button class="btn btn-small" ng-class="{'active':toolName == 'Add ' + mode}" ng-click="setTool()">{{ name }}</button>
 <button class="btn btn-small dropdown-toggle" data-toggle="dropdown" ng-click="setTool()">
 	<span class="caret"></span>
 </button>
